hphp/hack/test/typecheck/reactive/foreach_in_rx3.php.exp
File "foreach_in_rx3.php", line 5, characters 12-13:
Cannot traverse over non-reactive traversable in reactive code. (Typing[4267])
